--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Sven Nilsen <bvssvni@gmail.com>"]
 description = "A multiplayer VR space war game in the Trappist system"
 license = "MIT"
-keywords = ["game engine", "vr", "multiplayer"]
+keywords = ["game", "vr", "multiplayer", "space"]
 repository = "https://github.com/bvssvni/trappist.git"
 homepage = "https://github.com/bvssvni/trappist"
 
